# sysd

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PKGBUILD  after-compaction.txt  docker-compose.yml  run-tests.sh  sysd.install
.github/workflows/: ci.yml
doc/: DESIGN.md
examples/: test_bootplan.rs  test_debug.rs  test_fstab.rs  test_load_getty.rs  test_name.rs  test_symlink.rs  test_trace.rs  test_wants.rs
hooks/: sysd-daemon-reload  sysd-daemon-reload.hook  sysd-restart-changed  sysd-restart-changed.hook
scripts/: compare-boot-plan.sh
src/: fstab.rs  getty.rs  getty_impl.rs  lib.rs  main.rs  protocol.rs  sandbox_prctl.rs
src/cgroups/: mod.rs
src/commands/: boot.rs  default.rs  deps.rs  list.rs  mod.rs  parse.rs  reload_unit_files.rs  start.rs  status.rs  stop.rs  sync_units.rs
src/dbus/: manager.rs  manager_impl.rs  manager_tests.rs  mod.rs  scope.rs  unit.rs
src/executor/: mod.rs
src/manager/: conditions.rs  conditions_impl.rs  conditions_more_tests.rs  deps.rs  dynamic_user.rs  enable.rs  enable_impl.rs  enable_impl_tests.rs  generators.rs  mod.rs  mod_impl.rs  mount_ops.rs  mount_ops_impl.rs  notify.rs  notify_impl.rs  path_ops.rs  path_watcher.rs  path_watcher_impl.rs  path_watcher_impl_tests.rs  process.rs  runtime.rs  sandbox.rs  scope.rs  scope_impl.rs  slice_ops.rs  socket_ops.rs  socket_ops_impl.rs  socket_ops_tests.rs  socket_watcher.rs  socket_watcher_impl.rs  state.rs  timer_ops.rs  timer_ops_impl.rs  timer_scheduler.rs  timer_scheduler_impl.rs  (+2 more)
tests/: manager_integration.rs  parser_integration.rs  pid1_integration.rs  qemu_integration.rs
(+51 files in other folders)
