[package]
name = "sysd"
version = "0.1.0"
edition = "2021"
description = "Minimal systemd-compatible init system"
license = "MIT"

[[bin]]
name = "sysd"
path = "src/bin/sysd.rs"

[[bin]]
name = "sysdctl"
path = "src/bin/sysdctl.rs"

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full", "signal"] }

# D-Bus
zbus = "5.12"

# Logging
log = "0.4"
env_logger = "0.11"

# Config/parsing
shlex = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

# Unix/Linux
nix = { version = "0.29", features = ["signal", "process", "user", "fs", "mount", "reboot", "socket", "uio"] }
libc = "0.2"
seccompiler = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"

# Time
chrono = "0.4"

# IPC
peercred-ipc = { git = "https://github.com/Osso/peercred-ipc" }
rmp-serde = "1"

[dev-dependencies]
tokio-test = "0.4"
